--- a/style.css
+++ b/style.css
@@ -91,6 +91,27 @@
   .paragraphs p {
     margin: 10px;
   }
+  @media (max-width: 576px) {
+    h1 {
+      font-size: 48px;
+      line-height: 1.5;
+    }
+    h2,
+    h3 {
+      font-size: 32px;
+      text-align: center;
+    }
+  
+    p {
+      text-align: center;
+    }
+  
+    .project-link {
+      display: block;
+      text-align: center;
+      margin: 0 20px;
+    }
+  }
   .email-link {
     display: flex;
     justify-content: center;
